--- a/app.yaml
+++ b/app.yaml
@@ -13,6 +13,10 @@ handlers:
   static_files: static/favicon.ico
   upload: static/favicon\.ico
 
+- url: /google11d1154a466682cd.html
+  static_files: static/static/google11d1154a466682cd.html
+  upload: static/static/google11d1154a466682cd.html
+
 - url: /css
   static_dir: static/css
 
